yaml/lab5/web-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    run: web
