yaml/lab5/np.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-np
spec:
  podSelector:
    matchLabels:
      run: api
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: web
      namespaceSelector:
        matchLabels:
          app: yada
    ports:
        - protocol: TCP
          port: 8080
